Fixed align value

--- a/src/styles/blocks/_field.scss
+++ b/src/styles/blocks/_field.scss
@@ -8,11 +8,11 @@
     height: 75px;
 
     text-align: center;
-    vertical-align: center;
+    vertical-align: middle;
     border-radius: 5px;
     color: #776e65;
     background: #d6cdc4;
-    
+
     user-select: none;
 
     &--2 {
